--- a/blogpost.html
+++ b/blogpost.html
@@ -828,9 +828,7 @@
                 <p>Francisco Javier Suarez Verdugo</p>
                 <p>Gast&oacute;n Konstantinides</p>
                 <p>@Gabospa</p>
-                <p>Juan Carlos Rinc&oacute;n G&oacute;mez</p>
-                <p>Mario Yesid Acuña Garizado</p>
-                <p>Omar Roa</p>
+            <p>Barbara Carmona </p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
             </div>
